# cookmark

./: .flutter-plugins-dependencies  .gitignore  .vercelignore  .worktreeinclude  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.md  HANDOFF.md  README.md  analysis_options.yaml  checklist.md  context-notes.md  idea.md  pubspec.yaml  skills-lock.json  vercel.json
.github/workflows/: api.yml  ci.yml  flutter.yml  mobile.yml
api/: README.md  _gemini.mjs  extract.mjs  match.mjs  recognize.js  recognize.mjs
apps/admin/: README.md
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 198c2d418234_recipes.py  6b8076167b5b_baseline.py  a8dc76751b1a_accounts_sessions.py
apps/api/scripts/: export_openapi.py  seed_sessions.py  smoke_llm.py
apps/api/src/: main.py
apps/api/src/auth/: dependencies.py  exceptions.py  models.py  oidc.py  repository.py  router.py  schemas.py  service.py
apps/api/src/common/: database.py  prompts.py  urlguard.py
apps/api/src/core/: config.py
apps/api/src/health/: router.py
apps/api/src/llm/: __init__.py  dependencies.py  exceptions.py  gemini.py  ingest.py  router.py  schemas.py  scoring.py  service.py
apps/api/src/migration/: __init__.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
apps/api/src/ogimage/: exceptions.py  guard.py  parser.py  router.py  schemas.py  service.py
apps/api/src/recipes/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/services/: ai_processing.py
apps/api/tests/: conftest.py  idp.py  llm.py  test_auth_login.py  test_auth_session.py  test_config.py  test_contract.py  test_cors.py  test_health.py  test_llm_extract_url.py  test_llm_ingest.py  test_llm_routes.py  test_llm_scoring.py  test_llm_usage.py  test_migrations.py  test_og_image.py  test_og_image_guard.py  test_og_image_parser.py  test_recipes_crud.py  test_recipes_import.py  test_recipes_isolation.py
apps/mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
apps/web/: README.md
contracts/: README.md  openapi.yaml
docs/: coding-standards.md
docs/adr/: 0001-single-page-core-loop.md  0002-vague-items-excluded-from-matching.md  0003-manual-edit-metric.md  0004-single-blind-pilot.md  0005-flutter-mvp-web-first.md  0006-brand-color-and-app-shell.md  0007-refactor-scope-and-module-placement.md  0007-tab-shell-and-blessed-detail-push.md  0008-polyglot-monorepo-topology.md  0009-apps-api-materialization.md  0010-url-content-extraction.md  0011-native-android-pilot-target.md
docs/design/: README.md  color-decision.md
docs/pilot/: api-cutover-smoke.md  d0-readiness.md  native-apk-runbook.md
docs/refactor-38/: checklist.md  context-notes.md
docs/research/: auth-options-2026.md  cloud-run-vs-vercel-cost.md  competitors.md  fastapi-deploy-options-2026.md  flutter-oidc-login-cost.md  monetization-legal.md  ts-monorepo-toolchain-2026.md  user-pain.md  vision-tech.md
infra/: README.md
integration_test/: core_loop_test.dart
lib/: app.dart  main.dart  main_visual_qa.dart
lib/data/: app_storage.dart  storage.dart
lib/domain/: app_event.dart  backup.dart  debug_metrics.dart  ingredient.dart  loading_stage.dart  recipe.dart  recipe.freezed.dart  recipe.g.dart  suggestion.dart  suggestion.freezed.dart  suggestion.g.dart
scripts/: e2e.sh
test/: widget_test.dart
test_driver/: integration_test.dart
tool/: analyze_pilot.dart
web/: index.html  manifest.json
(+173 files in other folders)
